--- a/restaurants/flower-child---south-lamar.html
+++ b/restaurants/flower-child---south-lamar.html
@@ -144,73 +144,96 @@
                     <div class="main-content">
                         <div class="section">
                             <h2>About Flower Child</h2>
-                            <p class="description">Flower Child is a healthy fast-casual restaurant born from Fox Restaurant Concepts, the same group behind True Food Kitchen. Their mission is simple: serve food that makes you feel good. With a focus on fresh, organic ingredients and a menu that caters to various dietary needs, Flower Child has become a go-to for health-conscious Austinites.</p>
-                            <p>The South Lamar location brings the Flower Child experience to one of Austin's most vibrant neighborhoods, offering a bright, welcoming space perfect for a quick healthy lunch or casual dinner.</p>
+                            <p class="description">Flower Child is a healthy fast-casual restaurant born from Fox Restaurant Concepts, the same visionary group behind True Food Kitchen. Their mission is beautifully simple: serve food that makes you feel good—nourishing, colorful, delicious food made with fresh, organic ingredients that happen to also be good for you.</p>
+                            <p>The concept was born from the belief that healthy eating shouldn't mean sacrificing flavor or convenience. With a menu that caters thoughtfully to various dietary needs—including an exceptional range of gluten-free options—Flower Child has become a go-to for health-conscious Austinites who refuse to compromise on taste.</p>
+                            <p>The South Lamar location brings the Flower Child experience to one of Austin's most vibrant neighborhoods. The space is bright, airy, and welcoming—filled with natural light and positive energy that matches the food philosophy. Whether you're grabbing a quick healthy lunch between meetings, enjoying a casual dinner with friends, or meal-prepping for the week, Flower Child makes nutritious eating feel effortless and enjoyable.</p>
                         </div>
 
                         <div class="section">
                             <h2>Gluten-Free Dining at Flower Child</h2>
-                            <p>Flower Child is exceptionally GF-friendly with clearly marked menu items:</p>
+                            <p>Flower Child is exceptionally GF-friendly, making it one of the easier fast-casual options for celiac diners in Austin:</p>
                             <ul class="gf-features">
-                                <li><strong>Clearly Marked Menu:</strong> GF items are labeled with a "GF" indicator</li>
-                                <li><strong>Extensive GF Options:</strong> Many bowls, salads, and proteins are naturally GF</li>
-                                <li><strong>Customizable:</strong> Build your own plate or bowl with GF ingredients</li>
-                                <li><strong>Knowledgeable Staff:</strong> Team trained on dietary restrictions</li>
-                                <li><strong>App Ordering:</strong> Filter for GF options when ordering through their app</li>
+                                <li><strong>Clearly Marked Menu:</strong> GF items are prominently labeled with a "GF" indicator, removing the guesswork</li>
+                                <li><strong>Extensive GF Options:</strong> The majority of bowls, salads, and protein options are naturally gluten-free</li>
+                                <li><strong>Customizable Plates:</strong> Build your own plate or bowl by selecting from GF-safe ingredients</li>
+                                <li><strong>Knowledgeable Staff:</strong> Team members are well-trained on dietary restrictions and can guide you through safe options</li>
+                                <li><strong>App & Online Ordering:</strong> Filter specifically for GF options when ordering through their app or website</li>
+                                <li><strong>Ingredient Transparency:</strong> Staff can provide ingredient information upon request</li>
                             </ul>
-                            <p><strong>Note:</strong> While they have extensive GF options, this is not a dedicated GF kitchen. Cross-contamination is possible—inform staff of celiac disease for extra precautions.</p>
+                            <p><strong>Cross-Contamination Note:</strong> While Flower Child has extensive GF options, this is not a dedicated gluten-free kitchen. Shared prep surfaces and equipment are used. Inform staff about celiac disease so they can take extra precautions, such as changing gloves and using clean utensils. Most celiac diners report good experiences, but those with extreme sensitivity should assess their comfort level.</p>
                         </div>
 
                         <div class="section">
-                            <h2>Popular GF Menu Items</h2>
-                            <p>Many of Flower Child's signature items are gluten-free:</p>
+                            <h2>Popular Gluten-Free Menu Items</h2>
+                            <p>Many of Flower Child's signature dishes are naturally gluten-free, making ordering a pleasure rather than a challenge:</p>
                             <ul>
-                                <li><strong>Mother Earth Bowl (GF):</strong> Ancient grains, sweet potato, portobello, avocado, leafy greens</li>
-                                <li><strong>Glow Bowl (GF):</strong> Quinoa, salmon, avocado, pickled vegetables</li>
-                                <li><strong>Grass-Fed Steak Plate (GF):</strong> With seasonal vegetables</li>
-                                <li><strong>Organic Tofu Plate (GF):</strong> With your choice of sides</li>
-                                <li><strong>Superfood Salads (GF):</strong> Various salad options with GF dressings</li>
-                                <li><strong>GF Brownie:</strong> For dessert lovers!</li>
+                                <li><strong>Mother Earth Bowl (GF):</strong> Ancient grains, roasted sweet potato, portobello mushroom, avocado, leafy greens, red pepper miso vinaigrette—hearty, satisfying, and completely plant-based</li>
+                                <li><strong>Glow Bowl (GF):</strong> Quinoa, wild-caught salmon, avocado, pickled vegetables, cucumber, carrot—bright flavors with omega-3 benefits</li>
+                                <li><strong>Grass-Fed Steak Plate (GF):</strong> Premium steak with your choice of seasonal vegetable sides</li>
+                                <li><strong>Organic Tofu Plate (GF):</strong> Perfectly prepared tofu with flavorful accompaniments</li>
+                                <li><strong>Superfood Salads (GF):</strong> Various substantial salads with creative, GF-safe dressings</li>
+                                <li><strong>Roasted Chicken Plate (GF):</strong> Simple, perfectly roasted, and satisfying</li>
+                                <li><strong>GF Brownie:</strong> For dessert lovers who want something sweet—rich, fudgy, and completely gluten-free</li>
+                                <li><strong>Seasonal Specials:</strong> Check for rotating GF options that highlight the freshest seasonal produce</li>
                             </ul>
+                        </div>
+
+                        <div class="section">
+                            <h2>Build Your Own Plate</h2>
+                            <p>One of the best features for GF diners is the ability to build your own plate:</p>
+                            <ul>
+                                <li><strong>Choose Your Base:</strong> Ancient grains, leafy greens, or combine both</li>
+                                <li><strong>Pick Your Protein:</strong> Grass-fed steak, organic chicken, wild salmon, organic tofu, or portobello</li>
+                                <li><strong>Add Sides:</strong> Seasonal vegetables, sweet potato, avocado, and more</li>
+                                <li><strong>Select Dressing:</strong> Multiple GF-safe dressing options available</li>
+                            </ul>
+                            <p>This customization ensures you get exactly what you want while staying safely gluten-free.</p>
                         </div>
 
                         <div class="section">
                             <h2>What to Avoid</h2>
-                            <p>These items typically contain gluten:</p>
+                            <p>Be mindful of these items when ordering gluten-free at Flower Child:</p>
                             <ul>
-                                <li><strong>Sandwiches and wraps:</strong> Unless specified GF</li>
-                                <li><strong>Some dressings:</strong> Always confirm with staff</li>
-                                <li><strong>Breaded proteins:</strong> Any breaded items</li>
-                                <li><strong>Some desserts:</strong> Unless marked GF</li>
+                                <li><strong>Sandwiches and wraps:</strong> Contain gluten unless specifically marked GF</li>
+                                <li><strong>Some dressings:</strong> While most are GF, always confirm with staff</li>
+                                <li><strong>Breaded proteins:</strong> Any breaded or crusted items</li>
+                                <li><strong>Certain desserts:</strong> Only the GF Brownie is confirmed safe—other desserts may contain gluten</li>
+                                <li><strong>Some grain options:</strong> While quinoa and ancient grains are typically safe, always confirm preparation methods</li>
                             </ul>
                         </div>
 
                         <div class="section">
-                            <h2>Happy Rewards & Ordering</h2>
+                            <h2>Happy Rewards & Ordering Options</h2>
+                            <p>Make the most of your Flower Child experience:</p>
                             <ul>
-                                <li><strong>Happy Rewards:</strong> Download their app to earn points on purchases</li>
-                                <li><strong>Online Ordering:</strong> Order through their app or website</li>
-                                <li><strong>Catering:</strong> Available for groups and events</li>
+                                <li><strong>Happy Rewards Program:</strong> Download their app to earn points on every purchase—free food adds up quickly!</li>
+                                <li><strong>Online Ordering:</strong> Order through their app or website for quick pickup</li>
+                                <li><strong>GF Filter:</strong> The app allows you to filter menu items by dietary preference, including gluten-free</li>
+                                <li><strong>Catering:</strong> Available for groups and events with GF options included</li>
                                 <li><strong>Gift Cards:</strong> Available in-store and online</li>
                             </ul>
                         </div>
 
                         <div class="section">
-                            <h2>Other Austin Locations</h2>
-                            <p>Flower Child has multiple Austin locations:</p>
+                            <h2>Other Austin Flower Child Locations</h2>
+                            <p>Flower Child has multiple Austin-area locations, all offering the same GF-friendly menu:</p>
                             <ul>
                                 <li><a href="flower-child---domain.html">Flower Child - Domain</a> (North Austin)</li>
                                 <li><a href="flower-child---round-rock.html">Flower Child - Round Rock</a> (Round Rock)</li>
                             </ul>
+                            <p>No matter which location you visit, you'll find the same commitment to healthy, delicious, GF-friendly food.</p>
                         </div>
 
                         <div class="section">
                             <h2>Community Reviews</h2>
                             <blockquote style="border-left: 3px solid #4CAF50; padding-left: 1rem; margin: 1rem 0; font-style: italic;">
-                                "Love that the GF options are clearly marked! The Mother Earth Bowl is my favorite—so filling and flavorful." — Jessica M., Austin
+                                "Love that the GF options are clearly marked—no more squinting at ingredient lists or lengthy conversations with servers! The Mother Earth Bowl is my go-to: filling, flavorful, and I never worry about getting sick afterward." — Jessica M., Austin
                             </blockquote>
                             <blockquote style="border-left: 3px solid #4CAF50; padding-left: 1rem; margin: 1rem 0; font-style: italic;">
-                                "As a celiac, I appreciate restaurants that make it easy to identify what's safe. Flower Child does this well." — David K., Austin
+                                "As a celiac, I really appreciate restaurants that make it easy to identify what's safe without making me feel like a burden. Flower Child does this exceptionally well. The staff is always knowledgeable and kind about my dietary needs." — David K., Austin
+                            </blockquote>
+                            <blockquote style="border-left: 3px solid #4CAF50; padding-left: 1rem; margin: 1rem 0; font-style: italic;">
+                                "Finally, healthy fast-casual that actually tastes good AND accommodates my celiac! The Glow Bowl is incredible. I eat here at least twice a week. The GF brownie is also a must-try—so rich and satisfying!" — Amanda R., Austin
                             </blockquote>
                         </div>
 
