--- a/restaurants/hopdoddy-burger-bar---south-congress.html
+++ b/restaurants/hopdoddy-burger-bar---south-congress.html
@@ -143,64 +143,95 @@
                 <div class="detail-grid">
                     <div class="main-content">
                         <div class="section">
-                            <h2>About Hopdoddy</h2>
-                            <p class="description">Hopdoddy Burger Bar has become an Austin institution since opening on South Congress in 2010. Known for their fresh-ground-daily beef, creative burger combinations, hand-cut fries, and craft cocktails, Hopdoddy set a new standard for the gourmet burger experience in Austin.</p>
-                            <p>The South Congress location is the original Hopdoddy, and its lines out the door have become as iconic as the street itself. For gluten-free diners, Hopdoddy offers GF bun substitutions, making their quality burgers accessible to the celiac community.</p>
+                            <h2>About Hopdoddy Burger Bar</h2>
+                            <p class="description">Hopdoddy Burger Bar is an Austin institution that helped define the craft burger movement when it opened on South Congress in 2010. Known for their fresh-ground-daily beef, creative burger combinations, hand-cut Kennebec fries, adult milkshakes, and craft cocktails, Hopdoddy set a new standard for what a burger restaurant could be.</p>
+                            <p>The South Congress location is the original Hopdoddy—the one that started it all—and its legendary lines out the door have become as iconic as the street itself. There's something special about standing in that queue on a beautiful Austin day, watching the eclectic SoCo crowd pass by while anticipating one of the city's best burgers.</p>
+                            <p>For gluten-free diners, Hopdoddy offers quality GF bun substitutions, making their exceptional burgers accessible to the celiac community. While this isn't a dedicated GF kitchen, their commitment to offering alternatives means GF burger lovers don't have to miss out on the Hopdoddy experience.</p>
                         </div>
 
                         <div class="section">
-                            <h2>Gluten-Free Options</h2>
-                            <p>Hopdoddy accommodates GF diners:</p>
+                            <h2>Gluten-Free Dining at Hopdoddy</h2>
+                            <p>Hopdoddy provides several options for gluten-free guests to enjoy their menu:</p>
                             <ul class="gf-features">
-                                <li><strong>GF Buns Available:</strong> Substitute a gluten-free bun on any burger</li>
-                                <li><strong>Lettuce Wrap:</strong> Get any burger as a lettuce wrap (naturally GF)</li>
-                                <li><strong>Fresh Beef:</strong> All beef is naturally gluten-free</li>
-                                <li><strong>Salads:</strong> Burger salad options available</li>
-                                <li><strong>Shakes:</strong> Many shake flavors are naturally GF (confirm with staff)</li>
+                                <li><strong>GF Buns Available:</strong> Substitute a quality gluten-free bun on any burger for a small upcharge</li>
+                                <li><strong>Lettuce Wrap Option:</strong> Get any burger wrapped in crisp lettuce—naturally GF and refreshingly light</li>
+                                <li><strong>100% Fresh Beef:</strong> All beef patties are naturally gluten-free, ground fresh daily</li>
+                                <li><strong>Salad Options:</strong> Burger salad versions available—your choice of patty over greens</li>
+                                <li><strong>Shakes:</strong> Many shake flavors are naturally GF (always confirm with staff about mix-ins)</li>
+                                <li><strong>Sides:</strong> Check which sides are GF-safe—some may be cooked in shared fryers</li>
                             </ul>
-                            <p><strong>Important:</strong> While GF buns are available, burgers are cooked on shared grills. Those with severe celiac should be aware of potential cross-contamination.</p>
+                            <p><strong>Cross-Contamination Note:</strong> Hopdoddy uses shared grills for all burgers, and fries are cooked in shared fryers. While GF buns are available, those with severe celiac or extreme sensitivity should be aware of potential cross-contamination. Always inform your server about celiac disease so they can take extra precautions.</p>
                         </div>
 
                         <div class="section">
                             <h2>Popular Burgers (Order with GF Bun)</h2>
+                            <p>Hopdoddy's creative menu features something for everyone. Here are the crowd favorites to order with a GF bun:</p>
                             <ul>
-                                <li><strong>Classic Burger:</strong> Fresh beef, lettuce, tomato, pickles, H-sauce</li>
-                                <li><strong>Goodnight/Good Cause:</strong> Beef, bacon, cheddar, bbq sauce, fried onion (skip onion for GF)</li>
-                                <li><strong>Magic Shroom:</strong> Beef, swiss, truffle aioli, sautéed mushrooms</li>
-                                <li><strong>Greek Burger:</strong> Lamb & beef blend with feta, tzatziki</li>
-                                <li><strong>Veggie Burger:</strong> Black bean patty (confirm GF status)</li>
+                                <li><strong>Classic Burger:</strong> Fresh beef patty with crisp lettuce, ripe tomato, pickles, onion, and their signature H-sauce—a must-try for first-timers</li>
+                                <li><strong>Goodnight/Good Cause:</strong> Beef with applewood bacon, cheddar, sweet baby ray's bbq, and crispy onions (ask to skip the onions for GF)</li>
+                                <li><strong>Magic Shroom:</strong> Beef topped with sautéed wild mushrooms, swiss cheese, and house-made truffle aioli</li>
+                                <li><strong>Greek Burger:</strong> Lamb and beef blend with creamy feta, fresh tomato, and cool tzatziki sauce</li>
+                                <li><strong>Llano Poblano:</strong> Beef with roasted poblano, pepper jack, avocado, and chipotle mayo—Texas heat done right</li>
+                                <li><strong>Buffalo Bill:</strong> American Wagyu beef with all the fixings—the premium option</li>
+                            </ul>
+                            <p>Pro tip: Add a fried egg to any burger for extra richness (confirm egg preparation is GF).</p>
+                        </div>
+
+                        <div class="section">
+                            <h2>Beyond the Burger</h2>
+                            <p>While burgers are the star, Hopdoddy offers more:</p>
+                            <ul>
+                                <li><strong>Craft Cocktails:</strong> Creative drinks that pair perfectly with burgers—many are naturally GF</li>
+                                <li><strong>Spiked Shakes:</strong> Adult milkshakes with bourbon, rum, or other spirits (confirm GF status of each)</li>
+                                <li><strong>Draft Beer:</strong> Selection of local and craft beers (note: most beer contains gluten, but ciders may be available)</li>
+                                <li><strong>Kennebec Fries:</strong> Their signature hand-cut fries are legendary (cooked in shared fryer—proceed with caution)</li>
                             </ul>
                         </div>
 
                         <div class="section">
                             <h2>What to Avoid</h2>
+                            <p>Be mindful of these items when ordering gluten-free at Hopdoddy:</p>
                             <ul>
-                                <li><strong>Regular buns:</strong> Contain gluten</li>
-                                <li><strong>Fried onion strings:</strong> May be breaded</li>
-                                <li><strong>Some sauces:</strong> Ask about specific ingredients</li>
-                                <li><strong>Breaded items:</strong> Any breaded add-ons</li>
+                                <li><strong>Regular buns:</strong> Contain gluten—always specify GF bun or lettuce wrap</li>
+                                <li><strong>Crispy/Fried Onion Strings:</strong> Typically breaded and fried—request "no onion strings" on applicable burgers</li>
+                                <li><strong>Some sauces:</strong> Certain sauces may contain wheat—confirm with your server</li>
+                                <li><strong>Breaded toppings:</strong> Any breaded add-ons like fried jalapeños</li>
+                                <li><strong>Fries (for severe celiac):</strong> Cooked in shared fryers with breaded items</li>
+                                <li><strong>Beer:</strong> Most beers contain gluten—ask about cider or wine alternatives</li>
                             </ul>
                         </div>
 
                         <div class="section">
-                            <h2>The Hopdoddy Experience</h2>
-                            <p>The South Congress location features a lively bar scene, open kitchen, and the classic Hopdoddy vibe that has made it famous. Expect a wait during peak hours—the lines are legendary—but you can order beer or cocktails while you wait. The people-watching on South Congress is excellent from their patio.</p>
+                            <h2>The South Congress Experience</h2>
+                            <p>The original South Congress location offers the full Hopdoddy experience: a lively bar scene, open kitchen where you can watch your burger being prepared, energetic music, and the classic vibe that made Hopdoddy famous. Expect a wait during peak hours—the lines are legendary and part of the experience—but you can order beer or cocktails from the bar while you wait.</p>
+                            <p>The patio seating is prime real estate for people-watching on one of Austin's most iconic streets. Between the vintage shops, food trucks, and eclectic SoCo characters, there's endless entertainment while you enjoy your burger. The location captures everything that makes Austin unique.</p>
                         </div>
 
                         <div class="section">
-                            <h2>Related Restaurants</h2>
+                            <h2>Tips for a Great GF Hopdoddy Visit</h2>
                             <ul>
-                                <li><a href="lildoddy-burger-lab.html">Lil'Doddy Burger Lab</a> (Fast-casual with drive-thru)</li>
+                                <li><strong>Off-Peak Hours:</strong> Visit during less busy times (mid-afternoon) for faster service and potentially more attention to GF preparation</li>
+                                <li><strong>Communicate Clearly:</strong> Tell your server about celiac disease, not just GF preference—this triggers more careful handling</li>
+                                <li><strong>Skip the Fries:</strong> If you're highly sensitive, consider skipping fries due to shared fryer concerns</li>
+                                <li><strong>Lettuce Wrap:</strong> For maximum safety, consider the lettuce wrap option—no bun contamination concerns</li>
                             </ul>
+                        </div>
+
+                        <div class="section">
+                            <h2>Related: Lil'Doddy Burger Lab</h2>
+                            <p>Love Hopdoddy but want a faster experience? Check out <a href="lildoddy-burger-lab.html">Lil'Doddy Burger Lab</a>, their fast-casual concept with drive-thru service. Same quality, quicker format, and GF buns are available there too.</p>
                         </div>
 
                         <div class="section">
                             <h2>Community Reviews</h2>
                             <blockquote style="border-left: 3px solid #4CAF50; padding-left: 1rem; margin: 1rem 0; font-style: italic;">
-                                "The GF bun is actually really good! Love that I can get a quality craft burger without feeling left out." — Jason K., Austin
+                                "The GF bun is actually really good—not just 'acceptable for GF' but genuinely tasty! Love that I can get a quality craft burger without feeling like a second-class diner. The Magic Shroom with GF bun is my go-to." — Jason K., Austin
                             </blockquote>
                             <blockquote style="border-left: 3px solid #4CAF50; padding-left: 1rem; margin: 1rem 0; font-style: italic;">
-                                "Worth the wait, even as a celiac. Their burgers are that good. Just ask for the GF bun!" — Michelle T., San Antonio
+                                "Worth the wait, even as a celiac. Their burgers are simply that good. The South Congress location has unbeatable vibes. Just ask for the GF bun and enjoy!" — Michelle T., San Antonio
+                            </blockquote>
+                            <blockquote style="border-left: 3px solid #4CAF50; padding-left: 1rem; margin: 1rem 0; font-style: italic;">
+                                "I get mine lettuce-wrapped to be extra safe since I'm very sensitive. Still amazing! The Greek burger with lamb is incredible. Paired with a shake, it's the perfect Austin meal." — Tyler R., Austin
                             </blockquote>
                         </div>
 
