--- a/restaurants/il-brutto.html
+++ b/restaurants/il-brutto.html
@@ -146,69 +146,81 @@
                     <div class="main-content">
                         <div class="section">
                             <h2>About Il Brutto</h2>
-                            <p class="description">Il Brutto ("The Ugly" in Italian) brings authentic Italian cooking to East Austin's vibrant 6th Street corridor. Part of the New Waterloo hospitality group, this neighborhood Italian restaurant celebrates rustic Italian cuisine with handmade pasta, wood-fired preparations, and a focus on quality ingredients.</p>
-                            <p>The restaurant's casual-chic atmosphere, complete with a spacious patio, makes it perfect for everything from date nights to group dinners. For gluten-free diners, Il Brutto offers pasta substitutions and several naturally GF options.</p>
+                            <p class="description">Il Brutto ("The Ugly" in Italian) brings authentic, rustic Italian cooking to East Austin's vibrant 6th Street corridor. Part of the acclaimed New Waterloo hospitality group, this neighborhood Italian restaurant celebrates the soul of Italian cuisine—handmade pasta, wood-fired preparations, quality ingredients sourced with intention, and the warmth of gathering around a table with good company.</p>
+                            <p>The name "Il Brutto" embraces the Italian concept that beauty lies in imperfection—the rustic, the handmade, the honest. This philosophy extends to their cooking: straightforward, ingredient-driven dishes that let quality shine without unnecessary fuss. The result is Italian food that feels both elevated and genuinely comforting.</p>
+                            <p>For gluten-free diners, Il Brutto offers quality pasta substitutions and a menu rich with naturally GF options, making it one of the better Italian dining experiences available for the celiac community in Austin.</p>
                         </div>
 
                         <div class="section">
                             <h2>Gluten-Free Dining at Il Brutto</h2>
-                            <p>Il Brutto accommodates gluten-free guests with care:</p>
+                            <p>Il Brutto accommodates gluten-free guests thoughtfully, understanding that Italian cuisine—so often centered on pasta and bread—can be challenging for celiacs:</p>
                             <ul class="gf-features">
-                                <li><strong>GF Pasta Available:</strong> Gluten-free pasta can be substituted in many dishes</li>
-                                <li><strong>Naturally GF Options:</strong> Many antipasti and protein dishes are naturally gluten-free</li>
-                                <li><strong>Knowledgeable Staff:</strong> Servers trained to identify GF-safe options</li>
-                                <li><strong>Online Ordering:</strong> GF options available for pickup through Toast</li>
-                                <li><strong>Celiac Awareness:</strong> Kitchen takes allergy requests seriously</li>
+                                <li><strong>Quality GF Pasta:</strong> Gluten-free pasta can be substituted in most pasta dishes for a small upcharge</li>
+                                <li><strong>Naturally GF Antipasti:</strong> Many starters—burrata, carpaccio, vegetable preparations—are naturally gluten-free</li>
+                                <li><strong>Wood-Fired Proteins:</strong> Grilled meats and fish prepared on the wood-fire grill are typically GF</li>
+                                <li><strong>Knowledgeable Staff:</strong> Servers are trained to identify GF-safe options and communicate with the kitchen</li>
+                                <li><strong>Online Ordering:</strong> GF options available for pickup through Toast—dietary preferences can be noted</li>
+                                <li><strong>Celiac Awareness:</strong> Kitchen takes allergy requests seriously when informed</li>
                             </ul>
-                            <p><strong>Important:</strong> Always inform your server about celiac disease. Confirm sauce ingredients and preparation methods with your server.</p>
+                            <p><strong>Cross-Contamination Note:</strong> Il Brutto is not a dedicated GF kitchen. Flour is used extensively for handmade pasta and bread. While they accommodate GF requests, cross-contamination is possible. Always clearly inform your server about celiac disease (not just preference) so they can take appropriate precautions. Confirm sauce ingredients and preparation methods with your server.</p>
                         </div>
 
                         <div class="section">
-                            <h2>Menu Highlights for GF Diners</h2>
-                            <p>Il Brutto's menu features several options that can be prepared gluten-free:</p>
+                            <h2>Must-Try Menu Items for GF Diners</h2>
+                            <p>Il Brutto's menu features several excellent options for gluten-free guests:</p>
                             <ul>
-                                <li><strong>Antipasti:</strong> Many starters like burrata, carpaccio, and vegetable preparations are naturally GF</li>
-                                <li><strong>Pasta (with GF sub):</strong> Request GF pasta for dishes like cacio e pepe, carbonara, or pomodoro</li>
-                                <li><strong>Wood-Fired Proteins:</strong> Grilled meats and fish prepared on the wood-fire grill</li>
-                                <li><strong>Seasonal Vegetables:</strong> Fresh vegetable preparations roasted or grilled</li>
-                                <li><strong>Salads:</strong> Fresh salads with GF dressings</li>
+                                <li><strong>Burrata:</strong> Creamy, fresh burrata with seasonal accompaniments—a perfect starter and naturally GF</li>
+                                <li><strong>Beef Carpaccio:</strong> Thinly sliced raw beef with capers, arugula, and olive oil—elegant and naturally GF</li>
+                                <li><strong>Seasonal Vegetable Antipasti:</strong> Roasted or grilled preparations that showcase fresh produce</li>
+                                <li><strong>Pasta with GF Substitution:</strong> Classic preparations like cacio e pepe, carbonara, pomodoro, or seasonal specials—confirm sauce is GF</li>
+                                <li><strong>Wood-Fired Steak:</strong> Premium cuts prepared over wood flame with simple, quality preparation</li>
+                                <li><strong>Grilled Fish:</strong> Fresh fish preparations from the wood-fired grill</li>
+                                <li><strong>Roasted Chicken:</strong> Simple and satisfying when available</li>
+                                <li><strong>Contorni (Sides):</strong> Seasonal vegetable sides are typically naturally GF</li>
                             </ul>
                         </div>
 
                         <div class="section">
                             <h2>What to Avoid</h2>
-                            <p>These items typically contain gluten:</p>
+                            <p>Be mindful of these items when dining gluten-free at Il Brutto:</p>
                             <ul>
-                                <li><strong>Regular pasta:</strong> Unless substituted with GF pasta</li>
-                                <li><strong>Bread and focaccia:</strong> Standard bread contains gluten</li>
-                                <li><strong>Breaded items:</strong> Any items with breadcrumb coating</li>
-                                <li><strong>Some sauces:</strong> Always confirm sauce ingredients</li>
-                            </ul>
-                        </div>
-
-                        <div class="section">
-                            <h2>Reservations & Events</h2>
-                            <ul>
-                                <li><strong>Reservations:</strong> Available through OpenTable</li>
-                                <li><strong>Online Ordering:</strong> Available through Toast for pickup</li>
-                                <li><strong>Private Events:</strong> Groups and events welcome—inquire for details</li>
-                                <li><strong>Calendario:</strong> Check their events calendar for special dinners and happenings</li>
+                                <li><strong>Regular handmade pasta:</strong> Contains gluten—always request GF substitution</li>
+                                <li><strong>House bread and focaccia:</strong> Standard bread service contains gluten</li>
+                                <li><strong>Breaded items:</strong> Any items with breadcrumb coating or crust</li>
+                                <li><strong>Some sauces:</strong> Certain sauces may use flour as a thickener—always confirm with your server</li>
+                                <li><strong>Desserts:</strong> Most Italian desserts contain gluten—ask about any GF options</li>
                             </ul>
                         </div>
 
                         <div class="section">
                             <h2>The Il Brutto Experience</h2>
-                            <p>Located in the heart of East Austin's revitalized 6th Street area, Il Brutto offers a warm, inviting atmosphere with exposed brick, an open kitchen, and a lovely patio perfect for Austin's weather. The restaurant embodies the Italian tradition of gathering around food and conversation.</p>
-                            <p>Il Brutto is part of New Waterloo's portfolio of Austin hospitality concepts, which includes several hotels and restaurants across the city.</p>
+                            <p>Located in the heart of East Austin's revitalized 6th Street area, Il Brutto offers a warm, inviting atmosphere that feels like dining in a beloved neighborhood restaurant in Rome. The space features exposed brick walls, an open kitchen where you can watch pasta being made, warm lighting, and a lovely patio that's perfect for Austin's generous outdoor weather.</p>
+                            <p>The atmosphere encourages lingering—this is Italian dining in the true tradition, where the meal is as much about conversation and connection as it is about the food. Whether you're on a romantic date night, gathering with friends, or celebrating a special occasion, Il Brutto creates the right setting.</p>
+                            <p>Il Brutto is part of New Waterloo's portfolio of Austin hospitality concepts, which includes several hotels and restaurants across the city. The group is known for creating spaces with genuine soul and hospitality.</p>
+                        </div>
+
+                        <div class="section">
+                            <h2>Reservations & Practical Info</h2>
+                            <ul>
+                                <li><strong>Reservations:</strong> Available through OpenTable—recommended for weekend dinners</li>
+                                <li><strong>Walk-ins:</strong> Welcome, especially earlier in the evening or on weeknights</li>
+                                <li><strong>Online Ordering:</strong> Available through Toast for pickup—note dietary restrictions in comments</li>
+                                <li><strong>Private Events:</strong> Groups and events welcome—inquire directly for details</li>
+                                <li><strong>Calendario:</strong> Check their events calendar for special dinners, wine pairings, and happenings</li>
+                                <li><strong>Parking:</strong> Street parking available; consider rideshare for ease</li>
+                            </ul>
                         </div>
 
                         <div class="section">
                             <h2>Community Reviews</h2>
                             <blockquote style="border-left: 3px solid #4CAF50; padding-left: 1rem; margin: 1rem 0; font-style: italic;">
-                                "The GF pasta here is excellent—you really can't tell the difference. The staff was very accommodating and made sure my celiac needs were met." — Amanda J., Austin
+                                "The GF pasta here is genuinely excellent—you really can't tell the difference from regular pasta. The staff was incredibly accommodating, confirmed sauce ingredients without making me feel difficult, and made sure my celiac needs were completely met. Finally, Italian food I can enjoy!" — Amanda J., Austin
                             </blockquote>
                             <blockquote style="border-left: 3px solid #4CAF50; padding-left: 1rem; margin: 1rem 0; font-style: italic;">
-                                "Love the patio and the vibe. Great Italian food with GF options. The burrata is a must-try!" — Chris P., Austin
+                                "Love the patio and the whole East Austin vibe here. Great Italian food with solid GF options. The burrata is absolutely a must-try—creamy, fresh, and naturally safe for me to eat. One of my favorite date night spots." — Chris P., Austin
+                            </blockquote>
+                            <blockquote style="border-left: 3px solid #4CAF50; padding-left: 1rem; margin: 1rem 0; font-style: italic;">
+                                "As someone who misses Italian food terribly since my celiac diagnosis, Il Brutto has become my go-to. The GF cacio e pepe satisfies my pasta cravings, and the wood-fired proteins are always fantastic. Just communicate clearly about your needs!" — Rachel M., Austin
                             </blockquote>
                         </div>
 
