--- a/restaurants/intero.html
+++ b/restaurants/intero.html
@@ -144,70 +144,103 @@
                     <div class="main-content">
                         <div class="section">
                             <h2>About Intero</h2>
-                            <p class="description">Intero brings intimate, soulful Italian cooking to East Austin's Cesar Chavez corridor. This neighborhood gem is known for its handmade pasta, thoughtfully curated wine selection, and—uniquely—its own line of handcrafted artisan chocolates that make perfect gifts or a sweet end to your meal.</p>
-                            <p>The restaurant's cozy atmosphere, complete with a charming patio, makes it ideal for romantic dinners, small celebrations, or a leisurely meal with friends. For gluten-free diners, Intero offers pasta substitutions and several naturally GF options.</p>
+                            <p class="description">Intero brings intimate, soulful Italian cooking to East Austin's vibrant Cesar Chavez corridor. This neighborhood gem has earned devoted following for its handmade pasta, thoughtfully curated wine selection, and—uniquely among Austin restaurants—its own line of handcrafted artisan chocolates that make perfect gifts or a luxurious end to your meal.</p>
+                            <p>The name "Intero" means "whole" in Italian, reflecting the restaurant's philosophy of crafting complete, satisfying dining experiences using whole, quality ingredients. Everything here feels intentional—from the carefully sourced produce to the wines selected to complement each dish to the chocolates made by hand in-house.</p>
+                            <p>The restaurant's cozy, romantic atmosphere—complete with a charming patio that captures Austin's magical evening light—makes it ideal for date nights, intimate celebrations, anniversary dinners, or leisurely meals with close friends. For gluten-free diners, Intero offers quality pasta substitutions and a menu rich with naturally GF options, making Italian dining accessible to the celiac community.</p>
                         </div>
 
                         <div class="section">
                             <h2>Gluten-Free Dining at Intero</h2>
-                            <p>Intero accommodates gluten-free guests thoughtfully:</p>
+                            <p>Intero accommodates gluten-free guests with genuine care and attention:</p>
                             <ul class="gf-features">
-                                <li><strong>GF Pasta Available:</strong> Gluten-free pasta substitutions available for many dishes</li>
-                                <li><strong>Naturally GF Proteins:</strong> Grilled meats and fish often naturally gluten-free</li>
-                                <li><strong>Seasonal Vegetables:</strong> Fresh vegetable preparations typically GF</li>
-                                <li><strong>Knowledgeable Staff:</strong> Team can guide you through GF-safe options</li>
-                                <li><strong>Artisan Chocolates:</strong> Many of their handcrafted chocolates are naturally GF</li>
+                                <li><strong>Quality GF Pasta:</strong> Gluten-free pasta substitutions available for most pasta dishes</li>
+                                <li><strong>Naturally GF Proteins:</strong> Grilled meats, fish, and chops are often naturally gluten-free</li>
+                                <li><strong>Seasonal Vegetables:</strong> Fresh vegetable preparations are typically GF and delicious</li>
+                                <li><strong>GF Antipasti:</strong> Many starters are naturally safe—burrata, carpaccio, vegetable preparations</li>
+                                <li><strong>Knowledgeable Staff:</strong> Team can guide you through GF-safe options with confidence</li>
+                                <li><strong>Artisan Chocolates:</strong> Many of their handcrafted chocolates are naturally gluten-free—perfect for dessert</li>
                             </ul>
-                            <p><strong>Important:</strong> Always inform your server about celiac disease. Request GF pasta specifically and confirm all sauce ingredients.</p>
+                            <p><strong>Cross-Contamination Note:</strong> Intero is not a dedicated GF kitchen. Flour is used for handmade pasta, and cross-contamination is possible. Always clearly inform your server about celiac disease, request GF pasta specifically, and confirm all sauce ingredients. The kitchen takes allergies seriously when properly informed.</p>
                         </div>
 
                         <div class="section">
-                            <h2>Happy Hour</h2>
-                            <p>Intero offers one of East Austin's best happy hours:</p>
+                            <h2>Happy Hour—A GF-Friendly Ritual</h2>
+                            <p>Intero offers one of East Austin's best happy hours, and it's particularly appealing for gluten-free diners:</p>
                             <ul>
                                 <li><strong>Days:</strong> Tuesday, Wednesday, Thursday</li>
                                 <li><strong>Hours:</strong> 5:00 PM – 6:30 PM</li>
                                 <li><strong>Deals:</strong> Discounted drinks and select appetizers</li>
+                                <li><strong>GF-Friendly:</strong> Many happy hour bites are naturally GF—antipasti, olives, vegetable preparations</li>
                             </ul>
-                            <p>Happy Hour is the perfect time to try their naturally GF antipasti and a glass of Italian wine on the patio.</p>
+                            <p>Happy Hour is the perfect time to try their naturally GF antipasti paired with a glass of Italian wine on the patio. The atmosphere is relaxed and welcoming, making it ideal for unwinding after work or starting a special evening.</p>
                         </div>
 
                         <div class="section">
-                            <h2>Artisan Chocolates</h2>
-                            <p>One of Intero's unique offerings is their line of handcrafted artisan chocolates:</p>
+                            <h2>Must-Try Menu Items for GF Diners</h2>
+                            <p>Intero's menu features several excellent options for gluten-free guests:</p>
                             <ul>
-                                <li><strong>Truffles:</strong> Handmade with premium ingredients</li>
-                                <li><strong>Chocolate Barks:</strong> Seasonal varieties available</li>
-                                <li><strong>Gift Boxes:</strong> Perfect for holidays and special occasions</li>
-                                <li><strong>Pre-Orders:</strong> Available online for pickup</li>
+                                <li><strong>Burrata:</strong> Creamy, fresh burrata with seasonal accompaniments—naturally GF and divine</li>
+                                <li><strong>Seasonal Antipasti:</strong> Rotating vegetable and cheese preparations, mostly GF</li>
+                                <li><strong>Pasta with GF Sub:</strong> Classic Italian preparations adapted with quality GF pasta—confirm sauces are safe</li>
+                                <li><strong>Grilled Fish:</strong> Fresh, simply prepared fish that lets quality ingredients shine</li>
+                                <li><strong>Wood-Fired Proteins:</strong> Meats and chops prepared with care</li>
+                                <li><strong>Seasonal Vegetables:</strong> Always excellent and typically GF</li>
+                                <li><strong>Artisan Chocolates:</strong> Many varieties are GF—ask which are safe for you</li>
                             </ul>
-                            <p><strong>Note:</strong> Many of their chocolates are naturally gluten-free, but always confirm for specific varieties as some may contain gluten-containing ingredients.</p>
+                        </div>
+
+                        <div class="section">
+                            <h2>The Chocolate Experience</h2>
+                            <p>One of Intero's most unique offerings is their line of handcrafted artisan chocolates, made in-house with the same attention to quality that defines their cooking:</p>
+                            <ul>
+                                <li><strong>Truffles:</strong> Handmade with premium ingredients in creative flavors</li>
+                                <li><strong>Chocolate Barks:</strong> Seasonal varieties featuring quality chocolate with nuts, dried fruits, and other additions</li>
+                                <li><strong>Bonbons:</strong> Elegant, gift-worthy chocolates</li>
+                                <li><strong>Gift Boxes:</strong> Beautifully presented collections perfect for holidays, hostess gifts, or special occasions</li>
+                                <li><strong>Pre-Orders:</strong> Available online for pickup—plan ahead for holidays</li>
+                            </ul>
+                            <p><strong>GF Note:</strong> Many of their chocolates are naturally gluten-free, but always confirm for specific varieties as some may contain cookies, malt, or other gluten-containing ingredients. Staff can identify which options are safe.</p>
                         </div>
 
                         <div class="section">
                             <h2>What to Avoid</h2>
-                            <p>These items typically contain gluten:</p>
+                            <p>Be mindful of these items when dining gluten-free at Intero:</p>
                             <ul>
-                                <li><strong>Regular pasta:</strong> Unless substituted with GF pasta</li>
+                                <li><strong>Regular handmade pasta:</strong> Contains gluten—always request GF substitution</li>
                                 <li><strong>Bread service:</strong> Standard bread contains gluten</li>
-                                <li><strong>Some desserts:</strong> Check with your server for GF options</li>
-                                <li><strong>Some sauces:</strong> Always confirm ingredients</li>
+                                <li><strong>Certain desserts:</strong> Some may contain gluten—ask about GF options (chocolates are often safe)</li>
+                                <li><strong>Some sauces:</strong> May use flour as thickener—always confirm ingredients with server</li>
+                                <li><strong>Certain chocolates:</strong> Some varieties may contain gluten ingredients—ask which are safe</li>
                             </ul>
                         </div>
 
                         <div class="section">
                             <h2>The Intero Experience</h2>
-                            <p>Located on East Cesar Chavez Street, Intero offers an intimate dining experience with warm lighting, an inviting bar, and a patio that's perfect for Austin evenings. The restaurant's commitment to quality—from the handmade pasta to the artisan chocolates—makes every visit special.</p>
-                            <p>Reservations are available through OpenTable and recommended for weekend dinners. Be sure to review their "Dining FAQ" page before your visit for the most current information.</p>
+                            <p>Located on East Cesar Chavez Street in one of Austin's most dynamic neighborhoods, Intero offers an intimate dining experience that feels genuinely special. The space features warm lighting that flatters everyone, an inviting bar perfect for a pre-dinner drink, and a patio that captures the magic of Austin evenings—string lights, gentle breezes, and the energy of East Austin all around you.</p>
+                            <p>The restaurant's commitment to quality—from the handmade pasta to the curated wines to the artisan chocolates—makes every visit feel like an occasion. This is the kind of place you save for celebrations, date nights, and meals that matter.</p>
+                        </div>
+
+                        <div class="section">
+                            <h2>Reservations & Practical Info</h2>
+                            <ul>
+                                <li><strong>Reservations:</strong> Available through OpenTable—recommended for weekend dinners and special occasions</li>
+                                <li><strong>Walk-ins:</strong> Welcome, especially for happy hour and early evenings</li>
+                                <li><strong>Chocolate Orders:</strong> Can be placed online for pickup—great for gifts</li>
+                                <li><strong>Dining FAQ:</strong> Check their website for the most current information before your visit</li>
+                                <li><strong>Parking:</strong> Street parking available in the neighborhood</li>
+                            </ul>
                         </div>
 
                         <div class="section">
                             <h2>Community Reviews</h2>
                             <blockquote style="border-left: 3px solid #4CAF50; padding-left: 1rem; margin: 1rem 0; font-style: italic;">
-                                "Such a gem! The GF pasta was perfect, and the patio atmosphere was so romantic. Don't skip the chocolates—they're incredible." — Rebecca S., Austin
+                                "Such a gem! The GF pasta was genuinely perfect—cooked al dente and tossed with sauce that had incredible depth of flavor. The patio atmosphere was so romantic, and we finished with chocolates that were just extraordinary. This is now our anniversary spot." — Rebecca S., Austin
                             </blockquote>
                             <blockquote style="border-left: 3px solid #4CAF50; padding-left: 1rem; margin: 1rem 0; font-style: italic;">
-                                "Finally, an Italian restaurant that takes celiac seriously AND makes amazing chocolate. Happy Hour on the patio is now my weekly ritual." — Mark D., Austin
+                                "Finally, an Italian restaurant that takes celiac seriously AND makes amazing chocolate. Happy Hour on the patio has become my Tuesday ritual—a glass of wine, some antipasti that's naturally GF, and the glow of string lights. Can't beat it." — Mark D., Austin
+                            </blockquote>
+                            <blockquote style="border-left: 3px solid #4CAF50; padding-left: 1rem; margin: 1rem 0; font-style: italic;">
+                                "The chocolate gift boxes are my go-to for hostess gifts now. Beautiful presentation, incredible quality, and most are GF so I can actually taste-test before giving them away! The restaurant experience is equally lovely." — Christine H., Austin
                             </blockquote>
                         </div>
 
