--- a/restaurants/nomade-cocina.html
+++ b/restaurants/nomade-cocina.html
@@ -154,44 +154,96 @@
                     <div class="main-content">
                         <div class="section">
                             <h2>About Nômadé Cocina</h2>
-                            <p class="description">Nômadé Cocina is a 100% gluten-free restaurant featuring Yucatán-inspired cuisine with Lebanese, Portuguese, and African influences. This award-winning establishment offers an innovative menu centered around a raw bar with ceviches, crudos, and wood-fired specialties.</p>
-                            <p>Named #4 on Yelp's Best New Restaurant in the South and a 2024 OpenTable Diners' Choice Award winner, Nômadé has quickly become a destination for those seeking creative, coastal-inspired cuisine in a completely celiac-safe environment.</p>
+                            <p class="description">Nômadé Cocina represents a culinary revelation for gluten-free diners in Austin. This isn't just a restaurant with gluten-free options—it's a 100% gluten-free establishment featuring Yucatán-inspired cuisine with Lebanese, Portuguese, and African influences, creating a unique fusion that you won't find anywhere else in Texas.</p>
+                            <p>Chef Fermín Núñez, a James Beard Award semi-finalist, has created something truly special here: an innovative menu centered around a raw bar with ceviches, crudos, and wood-fired specialties, all prepared in a completely gluten-free kitchen. Named #4 on Yelp's Best New Restaurant in the South and a 2024 OpenTable Diners' Choice Award winner, Nômadé has quickly become a destination for those seeking creative, coastal-inspired cuisine in a completely celiac-safe environment.</p>
+                            <p>For those with celiac disease who often feel relegated to limited menu options, Nômadé offers a transformative dining experience where every single item is safe and the focus is purely on culinary excellence, not dietary restrictions.</p>
                         </div>
 
                         <div class="section">
-                            <h2>Gluten-Free Information</h2>
-                            <p>Nômadé Cocina is a 100% gluten-free establishment, making it completely safe for those with celiac disease and gluten sensitivities. Every dish on the menu is prepared without gluten, ensuring zero risk of cross-contamination.</p>
-                            <p>The restaurant's commitment to being entirely gluten-free means that guests can order anything on the menu with confidence. The kitchen uses certified gluten-free ingredients and dedicated preparation areas.</p>
+                            <h2>Why Nômadé is a Celiac Paradise</h2>
+                            <p>Nômadé Cocina's 100% gluten-free commitment makes it one of the safest fine dining experiences in Austin for those with celiac disease:</p>
                             <ul class="gf-features">
-                                <li>100% GF Menu</li><li>Celiac Safe</li><li>Dedicated GF Kitchen</li><li>No Cross-Contamination Risk</li>
+                                <li><strong>100% Gluten-Free Kitchen:</strong> Every single dish, sauce, and ingredient is gluten-free—zero cross-contamination risk</li>
+                                <li><strong>Dedicated GF Environment:</strong> No wheat, barley, or rye products ever enter the kitchen</li>
+                                <li><strong>Celiac-Safe Preparation:</strong> All cooking surfaces, utensils, and equipment are completely gluten-free</li>
+                                <li><strong>Chef Expertise:</strong> Kitchen team trained in celiac-safe practices and ingredient sourcing</li>
+                                <li><strong>Order Anything:</strong> For once, you can order absolutely anything on the menu without questions or concerns</li>
+                                <li><strong>Award-Winning Quality:</strong> Multiple accolades prove you're not sacrificing quality for safety</li>
                             </ul>
+                            <p>The restaurant's commitment to being entirely gluten-free means guests can finally experience the joy of ordering without anxiety, without lengthy conversations with servers, without scanning for "GF" symbols—just pure enjoyment of exceptional food.</p>
                         </div>
 
                         <div class="section">
-                            <h2>Popular Menu Items</h2>
+                            <h2>The Raw Bar Experience</h2>
+                            <p>Nômadé's raw bar is the heart of the restaurant, showcasing the freshest seafood in creative preparations:</p>
+                            <ul style="margin-left:1.5rem;line-height:1.8;">
+                                <li><strong>Ceviches:</strong> Fresh seafood "cooked" in citrus with bold, bright flavors influenced by coastal Yucatán traditions</li>
+                                <li><strong>Crudos:</strong> Delicate raw preparations highlighting premium fish with minimal intervention</li>
+                                <li><strong>Oysters:</strong> Fresh selections with house-made accompaniments</li>
+                                <li><strong>Seasonal Specials:</strong> The raw bar menu evolves with what's freshest and best</li>
+                            </ul>
+                            <p>Sitting at the raw bar provides an intimate view of the kitchen's artistry—watching skilled chefs compose beautiful plates of pristine seafood.</p>
+                        </div>
+
+                        <div class="section">
+                            <h2>Must-Try Menu Highlights</h2>
                             <p>The menu features globally-inspired coastal cuisine with standout dishes including:</p>
                             <ul style="margin-left:1.5rem;line-height:1.8;">
-                                <li><strong>Mayan Sikil Pak:</strong> Traditional pumpkin seed dip with regional spices</li>
-                                <li><strong>Oak-Grilled Pulpo:</strong> Tender octopus with wood-fired char</li>
-                                <li><strong>Ceviches & Crudos:</strong> Fresh raw bar selections with creative flavor profiles</li>
-                                <li><strong>Wood-Fired Specialties:</strong> Seasonal dishes prepared over oak flames</li>
-                                <li><strong>Craft Cocktails:</strong> Innovative drinks to complement the coastal menu</li>
+                                <li><strong>Mayan Sikil Pak:</strong> Traditional pumpkin seed dip with regional spices—a unique, flavorful starter</li>
+                                <li><strong>Oak-Grilled Pulpo:</strong> Perfectly tender octopus with beautiful wood-fired char and thoughtful accompaniments</li>
+                                <li><strong>Lamb Ribs:</strong> Slow-cooked with complex spices, falling off the bone</li>
+                                <li><strong>Wood-Fired Fish:</strong> Whole fish or fillets prepared over oak flames, seasonal preparations</li>
+                                <li><strong>Craft Cocktails:</strong> Innovative drinks designed to complement the coastal menu—all GF of course</li>
+                                <li><strong>Weekend Brunch:</strong> Saturday and Sunday brunch features special dishes alongside favorites</li>
                             </ul>
-                            <p>The menu changes seasonally to showcase the freshest ingredients, with influences from the coastal Yucatán region blended with Lebanese, Portuguese, and African culinary traditions.</p>
+                            <p>The menu changes seasonally to showcase the freshest ingredients, with influences from the coastal Yucatán region blended with Lebanese, Portuguese, and African culinary traditions—a fusion born from the diverse cultural history of the Mexican coast.</p>
+                        </div>
+
+                        <div class="section">
+                            <h2>Happy Hour & Special Occasions</h2>
+                            <ul>
+                                <li><strong>Daily Happy Hour:</strong> Sunday-Friday, 4:30 PM - 6:00 PM with discounted drinks and bites</li>
+                                <li><strong>Weekend Brunch:</strong> Saturday & Sunday 10:30 AM - 3:00 PM for a relaxed start to the day</li>
+                                <li><strong>Private Events:</strong> The space can accommodate private parties and special celebrations</li>
+                                <li><strong>Date Night:</strong> The romantic garden atmosphere makes it perfect for special occasions</li>
+                            </ul>
                         </div>
 
                         <div class="section">
                             <h2>Location & Atmosphere</h2>
-                            <p>Located on South 1st Street in the heart of South Austin, Nômadé features multiple dining areas including an open-air cantina, outdoor garden, and an intimate raw bar. The space combines modern elegance with tropical elements, creating a vibrant yet sophisticated atmosphere perfect for both special occasions and casual dining.</p>
-                            <p><strong>Hours:</strong></p>
+                            <p>Located on South 1st Street in the heart of South Austin, Nômadé features multiple stunning dining areas that transport you somewhere tropical and sophisticated:</p>
+                            <ul>
+                                <li><strong>Open-Air Cantina:</strong> Indoor-outdoor space with beautiful natural light</li>
+                                <li><strong>Outdoor Garden:</strong> Lush, romantic patio perfect for Austin evenings</li>
+                                <li><strong>Intimate Raw Bar:</strong> Front-row seats to watch the culinary artistry</li>
+                                <li><strong>Main Dining Room:</strong> Elegant yet relaxed atmosphere</li>
+                            </ul>
+                            <p>The space combines modern elegance with tropical elements—greenery, natural materials, warm lighting—creating a vibrant yet sophisticated atmosphere perfect for both special occasions and casual dining.</p>
+                        </div>
+
+                        <div class="section">
+                            <h2>Hours & Reservations</h2>
                             <ul style="margin-left:1.5rem;line-height:1.8;">
                                 <li>Monday-Thursday: 4:30 PM - 9:00 PM</li>
                                 <li>Friday: 4:30 PM - 9:30 PM</li>
-                                <li>Saturday: 10:30 AM - 3:00 PM; 5:00 PM - 9:30 PM</li>
-                                <li>Sunday: 10:30 AM - 3:00 PM; 5:00 PM - 9:00 PM</li>
+                                <li>Saturday: 10:30 AM - 3:00 PM (Brunch); 5:00 PM - 9:30 PM (Dinner)</li>
+                                <li>Sunday: 10:30 AM - 3:00 PM (Brunch); 5:00 PM - 9:00 PM (Dinner)</li>
                                 <li><em>Happy Hour: Sunday-Friday, 4:30 PM - 6:00 PM</em></li>
                             </ul>
-                            <p>Reservations are recommended and can be made through their website.</p>
+                            <p><strong>Reservations:</strong> Highly recommended, especially for weekend dining and brunch. Book through their website or OpenTable. For large parties or special events, contact the restaurant directly.</p>
+                        </div>
+
+                        <div class="section">
+                            <h2>Community Reviews</h2>
+                            <blockquote style="border-left: 3px solid #4CAF50; padding-left: 1rem; margin: 1rem 0; font-style: italic;">
+                                "I've been celiac for 15 years and this was one of the best dining experiences of my life. The fact that EVERYTHING is safe, combined with the incredible flavors and beautiful atmosphere—I actually got emotional. This is what dining should feel like for everyone." — Patricia M., Austin
+                            </blockquote>
+                            <blockquote style="border-left: 3px solid #4CAF50; padding-left: 1rem; margin: 1rem 0; font-style: italic;">
+                                "The raw bar experience here is unmatched. Fresh, creative, and completely celiac-safe. The pulpo is life-changing. Already planning my next visit." — Marco R., Houston
+                            </blockquote>
+                            <blockquote style="border-left: 3px solid #4CAF50; padding-left: 1rem; margin: 1rem 0; font-style: italic;">
+                                "Finally, a special occasion restaurant where my celiac wife can order anything! We celebrated our anniversary here and it was perfect. The garden patio at sunset is magical." — David K., Austin
+                            </blockquote>
                         </div>
 
                         <div class="related-restaurants">
