--- a/restaurants/postino---south-lamar.html
+++ b/restaurants/postino---south-lamar.html
@@ -143,65 +143,90 @@
                 <div class="detail-grid">
                     <div class="main-content">
                         <div class="section">
-                            <h2>About Postino</h2>
-                            <p class="description">Postino Wine Cafe has become an Austin favorite for its excellent wine selection, creative bruschetta boards, and relaxed atmosphere. Originally from Arizona, Postino has expanded across Texas and beyond, bringing their signature concept of affordable wine and elevated casual dining to South Lamar.</p>
-                            <p>What makes Postino special for gluten-free diners is their willingness to accommodate with gluten-free bread options for their famous bruschetta and paninis.</p>
+                            <h2>About Postino Wine Cafe</h2>
+                            <p class="description">Postino Wine Cafe has become an Austin institution for its excellent wine selection, creative bruschetta boards, and effortlessly relaxed atmosphere. Originally founded in Arizona, Postino has expanded across Texas and beyond, bringing their signature concept of affordable wine paired with elevated casual dining to the heart of South Lamar.</p>
+                            <p>The concept is brilliantly simple: exceptional wines at accessible prices, creative bruschetta combinations, and an atmosphere that encourages gathering with friends. The South Lamar location has become a neighborhood favorite, drawing crowds for their legendary $5 wine until 5pm deal and staying busy through evening as a prime spot for casual dates and friend groups alike.</p>
+                            <p>What makes Postino special for gluten-free diners is their genuine willingness to accommodate with high-quality gluten-free bread options for their famous bruschetta and paninis. While this isn't a dedicated GF kitchen, their staff is well-trained on accommodating dietary needs, making it possible for celiac diners to participate in the Postino experience.</p>
                         </div>
 
                         <div class="section">
-                            <h2>Gluten-Free Options</h2>
-                            <p>Postino offers several ways for GF diners to enjoy their menu:</p>
+                            <h2>Gluten-Free Dining at Postino</h2>
+                            <p>Postino offers several excellent ways for GF diners to enjoy their full menu experience:</p>
                             <ul class="gf-features">
-                                <li><strong>GF Bread Available:</strong> Substitute GF bread on bruschetta and paninis</li>
-                                <li><strong>Salads:</strong> Several salad options with GF-friendly ingredients</li>
-                                <li><strong>Cheese & Charcuterie:</strong> Naturally GF (skip the crackers)</li>
-                                <li><strong>Wine Selection:</strong> Extensive wine list (all naturally GF!)</li>
-                                <li><strong>Staff Knowledge:</strong> Team can help identify GF options</li>
+                                <li><strong>GF Bread Available:</strong> Quality gluten-free bread can be substituted on any bruschetta or panini order</li>
+                                <li><strong>Fresh Salads:</strong> Several salad options featuring fresh ingredients with GF-friendly dressings (confirm ingredients with server)</li>
+                                <li><strong>Cheese & Charcuterie Boards:</strong> Naturally gluten-free selections (simply skip the crackers or ask if GF crackers are available)</li>
+                                <li><strong>Wine Selection:</strong> Their extensive, carefully curated wine list is entirely naturally gluten-free</li>
+                                <li><strong>Staff Training:</strong> Team members are trained to help identify safe options and communicate with the kitchen</li>
+                                <li><strong>Allergy Communication:</strong> Kitchen takes allergy requests seriously when informed</li>
                             </ul>
-                            <p><strong>Important:</strong> While GF bread is available, this is a shared kitchen. Cross-contamination is possible—inform your server about celiac disease.</p>
+                            <p><strong>Cross-Contamination Note:</strong> Postino operates a shared kitchen where gluten-containing items are prepared. While they accommodate GF requests, cross-contamination is possible. Always inform your server about celiac disease so they can take extra precautions, such as using clean prep surfaces and changing gloves.</p>
                         </div>
 
                         <div class="section">
-                            <h2>Popular GF-Friendly Items</h2>
+                            <h2>Popular GF-Friendly Menu Items</h2>
+                            <p>Here's what to order for a delicious gluten-free Postino experience:</p>
                             <ul>
-                                <li><strong>Bruschetta Board (GF bread):</strong> Choose your favorite toppings on GF bread</li>
-                                <li><strong>Paninis (GF bread):</strong> Request any panini with GF bread substitution</li>
-                                <li><strong>Salads:</strong> Fresh salads with house-made dressings (confirm GF)</li>
-                                <li><strong>Cheese Boards:</strong> Selection of cheeses (skip crackers for GF)</li>
+                                <li><strong>Bruschetta Board (GF bread):</strong> This is Postino's signature offering—order the GF bread and choose from creative toppings like burrata with cherry tomatoes, ricotta with honey, or seasonal specials</li>
+                                <li><strong>Paninis (GF bread):</strong> Request any panini prepared with GF bread—the turkey avocado and grilled cheese are popular choices</li>
+                                <li><strong>Chopped Salad:</strong> Fresh, hearty, and flavorful—confirm dressing is GF</li>
+                                <li><strong>Cheese Boards:</strong> Selection of artisan cheeses with accompaniments (skip crackers for GF)</li>
+                                <li><strong>Charcuterie:</strong> Cured meats are typically naturally GF—confirm with server</li>
+                                <li><strong>Desserts:</strong> Ask about GF dessert options, which may vary seasonally</li>
                             </ul>
                         </div>
 
                         <div class="section">
-                            <h2>$5 Wine Special</h2>
-                            <p>Postino is famous for their daily wine special:</p>
+                            <h2>The Famous $5 Wine Happy Hour</h2>
+                            <p>Postino is famous across Austin for their unbeatable daily wine special that makes this an accessible happy hour destination:</p>
                             <ul>
-                                <li><strong>$5 Wine:</strong> All wines are $5 until 5pm daily</li>
-                                <li><strong>Wine Flights:</strong> Try multiple wines in a tasting flight</li>
-                                <li><strong>All GF:</strong> Wine is naturally gluten-free!</li>
+                                <li><strong>$5 Wine Daily:</strong> ALL wines by the glass are just $5 until 5pm every single day</li>
+                                <li><strong>$5 Pitchers:</strong> Some locations offer $5 wine pitchers before 5pm for groups</li>
+                                <li><strong>Wine Flights:</strong> Sample multiple wines in a tasting flight to discover new favorites</li>
+                                <li><strong>100% GF:</strong> All wine is naturally gluten-free, making this a perfect GF-safe indulgence</li>
+                                <li><strong>Extensive Selection:</strong> Whites, reds, rosés, and bubbles from around the world</li>
                             </ul>
+                            <p><strong>Pro Tip:</strong> Arrive around 4pm on a weekday for the best patio seating and $5 wines. Pair with a cheese board for an ideal pre-dinner happy hour experience.</p>
                         </div>
 
                         <div class="section">
                             <h2>What to Avoid</h2>
+                            <p>Be mindful of these items when dining gluten-free at Postino:</p>
                             <ul>
-                                <li><strong>Regular bread:</strong> Contains gluten—request GF substitution</li>
-                                <li><strong>Some sauces:</strong> May contain wheat—confirm with server</li>
-                                <li><strong>Crackers:</strong> Skip the crackers on cheese boards</li>
+                                <li><strong>Regular bread and focaccia:</strong> Contains gluten—always request GF substitution</li>
+                                <li><strong>Some sauces and dressings:</strong> May contain wheat flour as a thickener—confirm with your server</li>
+                                <li><strong>Crackers with cheese boards:</strong> Skip entirely unless GF crackers are confirmed available</li>
+                                <li><strong>Certain panini fillings:</strong> Ask about any breaded or marinated components</li>
+                                <li><strong>Some desserts:</strong> Pastries and cakes typically contain gluten</li>
                             </ul>
                         </div>
 
                         <div class="section">
-                            <h2>The Postino Experience</h2>
-                            <p>The South Lamar location features a spacious patio perfect for Austin's weather, industrial-chic interior design, and a lively atmosphere that's great for happy hour, dinner with friends, or a casual date night. The wine bar feel makes it perfect for lingering over a glass and some bruschetta.</p>
+                            <h2>The South Lamar Experience</h2>
+                            <p>The South Lamar location captures everything people love about Postino in a neighborhood that perfectly matches the vibe. The space features a spacious dog-friendly patio that's ideal for Austin's generous outdoor weather, industrial-chic interior design with exposed brick and warm lighting, and a lively atmosphere that transitions seamlessly from afternoon happy hour to evening dinner crowd.</p>
+                            <p>Whether you're meeting friends after work, enjoying a casual date night, catching up over wine and bruschetta, or simply unwinding with a book and a glass of something red, Postino's atmosphere encourages lingering. The wine bar feel—unpretentious yet curated—makes it equally comfortable for wine novices and enthusiasts alike.</p>
+                        </div>
+
+                        <div class="section">
+                            <h2>Hours & Tips</h2>
+                            <ul>
+                                <li><strong>Open Daily:</strong> Check website for current hours</li>
+                                <li><strong>Best Time for GF:</strong> Less busy periods (early afternoon) may allow kitchen to take extra care with GF orders</li>
+                                <li><strong>Patio Seating:</strong> First come, first served—arrive early on nice weather days</li>
+                                <li><strong>Groups:</strong> Great for group gatherings—bruschetta boards are perfect for sharing</li>
+                            </ul>
                         </div>
 
                         <div class="section">
                             <h2>Community Reviews</h2>
                             <blockquote style="border-left: 3px solid #4CAF50; padding-left: 1rem; margin: 1rem 0; font-style: italic;">
-                                "So happy they have GF bread! The bruschetta is delicious and I love the $5 wine happy hour." — Amanda S., Austin
+                                "So happy they have GF bread! The bruschetta is absolutely delicious—I get the burrata and honey ricotta every time. The $5 wine happy hour is unbeatable and wine is always celiac-safe!" — Amanda S., Austin
                             </blockquote>
                             <blockquote style="border-left: 3px solid #4CAF50; padding-left: 1rem; margin: 1rem 0; font-style: italic;">
-                                "The patio is great for people watching. Always ask for GF bread—it's good and they're happy to accommodate." — Drew M., Austin
+                                "The patio is great for people watching on South Lamar. Always ask for GF bread—it's genuinely good and they're always happy to accommodate. My go-to for casual friend hangs." — Drew M., Austin
+                            </blockquote>
+                            <blockquote style="border-left: 3px solid #4CAF50; padding-left: 1rem; margin: 1rem 0; font-style: italic;">
+                                "Perfect wine bar experience as a celiac. The cheese board (skip crackers) with a flight of reds is my happy place. Staff is always knowledgeable about dietary needs." — Rachel T., Austin
                             </blockquote>
                         </div>
 
