--- a/restaurants/the-steeping-room.html
+++ b/restaurants/the-steeping-room.html
@@ -144,54 +144,85 @@
                     <div class="main-content">
                         <div class="section">
                             <h2>About The Steeping Room</h2>
-                            <p class="description">The Steeping Room is Austin's beloved tea house, offering an elegant respite from the everyday with their extensive selection of premium loose-leaf teas and refined café fare. Known for their afternoon tea service—complete with tiered trays of scones, sandwiches, and sweets—The Steeping Room brings a touch of British tradition to Texas.</p>
-                            <p>What makes The Steeping Room special for gluten-free diners is their commitment to providing GF options for their signature afternoon tea experience, including house-made gluten-free scones.</p>
+                            <p class="description">The Steeping Room is Austin's beloved tea house, offering an elegant respite from the everyday with their extensive selection of premium loose-leaf teas and refined café fare. Since opening in North Austin near the Rosedale neighborhood, this charming establishment has become the go-to destination for tea enthusiasts, afternoon tea celebrations, and anyone seeking a moment of tranquility in their busy day.</p>
+                            <p>Known for their afternoon tea service—complete with tiered trays of scones, sandwiches, and sweets—The Steeping Room brings a touch of British tradition to Texas with a uniquely Austin twist. The atmosphere is warm and inviting, with natural light streaming through large windows and the gentle hum of conversation creating the perfect backdrop for lingering over a pot of perfectly steeped tea.</p>
+                            <p>What makes The Steeping Room special for gluten-free diners is their genuine commitment to providing GF options for their signature afternoon tea experience, including house-made gluten-free scones that rival their traditional counterparts. For those who have been missing the classic tea house experience since going gluten-free, The Steeping Room offers a welcoming solution.</p>
                         </div>
 
                         <div class="section">
-                            <h2>Gluten-Free Options</h2>
-                            <p>The Steeping Room accommodates GF diners with:</p>
+                            <h2>Gluten-Free Dining at The Steeping Room</h2>
+                            <p>The Steeping Room has developed a thoughtful approach to accommodating gluten-free guests, making it possible to enjoy the full afternoon tea experience with appropriate modifications:</p>
                             <ul class="gf-features">
-                                <li><strong>GF Scones:</strong> House-made gluten-free scones available</li>
-                                <li><strong>GF Afternoon Tea:</strong> Request the GF version of their afternoon tea service</li>
-                                <li><strong>GF Bread:</strong> Available for sandwiches upon request</li>
-                                <li><strong>Naturally GF Teas:</strong> All pure teas are naturally gluten-free</li>
-                                <li><strong>Salads:</strong> Many salad options are GF-friendly</li>
+                                <li><strong>House-Made GF Scones:</strong> Their gluten-free scones are baked in-house and served warm with clotted cream and jam—a rare treat for celiac diners</li>
+                                <li><strong>GF Afternoon Tea Service:</strong> Request the gluten-free version of their signature three-tiered afternoon tea when booking</li>
+                                <li><strong>GF Bread for Sandwiches:</strong> Available upon request for their tea sandwiches</li>
+                                <li><strong>Naturally GF Teas:</strong> All pure, unflavored teas are naturally gluten-free</li>
+                                <li><strong>GF-Friendly Salads:</strong> Many salad options can be prepared gluten-free</li>
+                                <li><strong>Staff Awareness:</strong> Team trained on dietary accommodations and cross-contamination concerns</li>
                             </ul>
-                            <p><strong>Important:</strong> Request GF options when making reservations for afternoon tea, as they may need to prepare items in advance.</p>
+                            <p><strong>Important Note:</strong> This is not a dedicated gluten-free kitchen. While they take precautions, cross-contamination is possible. Always inform your server about celiac disease. For afternoon tea, request GF options when making your reservation so they can prepare items in advance.</p>
                         </div>
 
                         <div class="section">
                             <h2>The Afternoon Tea Experience</h2>
-                            <p>The Steeping Room's signature offering is their afternoon tea service:</p>
+                            <p>The Steeping Room's signature offering is their traditional afternoon tea service, an elegant experience that transports you to a classic British tea room:</p>
                             <ul>
-                                <li><strong>Traditional Afternoon Tea:</strong> Three-tiered tray with scones, finger sandwiches, and sweets</li>
-                                <li><strong>GF Afternoon Tea:</strong> Same elegant experience with GF scones and bread</li>
-                                <li><strong>Premium Teas:</strong> Choose from their extensive selection of loose-leaf teas</li>
-                                <li><strong>Special Occasions:</strong> Perfect for birthdays, bridal showers, or special outings</li>
+                                <li><strong>Traditional Afternoon Tea:</strong> The iconic three-tiered tray featuring fresh scones with clotted cream and jam, delicate finger sandwiches with creative fillings, and a selection of house-made sweets and pastries</li>
+                                <li><strong>Gluten-Free Afternoon Tea:</strong> The same elegant experience thoughtfully adapted with GF scones and bread, allowing celiac diners to participate fully in this classic tradition</li>
+                                <li><strong>Premium Tea Selection:</strong> Choose from their extensive collection of over 100 loose-leaf teas from around the world</li>
+                                <li><strong>Special Occasions:</strong> Perfect for birthdays, bridal showers, baby showers, mother-daughter dates, or any celebration deserving of a touch of elegance</li>
+                                <li><strong>Seasonal Variations:</strong> The menu changes seasonally, featuring fresh, local ingredients and creative flavor combinations</li>
                             </ul>
-                            <p><strong>Tip:</strong> Reservations are recommended, especially for weekend afternoon tea. Mention GF needs when booking.</p>
+                            <p><strong>Pro Tip:</strong> Reservations are highly recommended for afternoon tea, especially on weekends. When booking, clearly mention your gluten-free requirements so the kitchen can prepare your items separately. Arrive with time to browse their tea selection—choosing your tea is part of the experience.</p>
                         </div>
 
                         <div class="section">
-                            <h2>Tea Selection</h2>
-                            <p>The Steeping Room features an impressive collection of teas:</p>
+                            <h2>Tea Selection & Expertise</h2>
+                            <p>The Steeping Room takes tea seriously, offering an impressive and carefully curated collection:</p>
                             <ul>
-                                <li><strong>Black Teas:</strong> Classic English Breakfast, Earl Grey, and more</li>
-                                <li><strong>Green Teas:</strong> Japanese and Chinese varieties</li>
-                                <li><strong>Herbal Infusions:</strong> Caffeine-free options (naturally GF)</li>
-                                <li><strong>Specialty Blends:</strong> House-created unique blends</li>
+                                <li><strong>Black Teas:</strong> Classic English Breakfast, rich Assam, smoky Lapsang Souchong, fragrant Earl Grey, and seasonal blends</li>
+                                <li><strong>Green Teas:</strong> Japanese Sencha, Chinese Dragon Well, Gyokuro, and delicate jasmine varieties</li>
+                                <li><strong>Oolong Teas:</strong> Traditional Taiwanese varieties with complex flavor profiles</li>
+                                <li><strong>White Teas:</strong> Subtle and elegant options including Silver Needle</li>
+                                <li><strong>Herbal Infusions:</strong> Caffeine-free options including rooibos, chamomile, peppermint, and unique house blends (all naturally GF)</li>
+                                <li><strong>Specialty & Seasonal Blends:</strong> Unique house-created blends that change with the seasons</li>
                             </ul>
-                            <p>All pure teas are naturally gluten-free. Check flavored blends for any additives.</p>
+                            <p>All pure, unflavored teas are naturally gluten-free. For flavored blends, always ask about ingredients as some may contain barley malt or other additives. Their knowledgeable staff can guide you to safe options.</p>
+                        </div>
+
+                        <div class="section">
+                            <h2>Beyond Afternoon Tea</h2>
+                            <p>While afternoon tea is the signature experience, The Steeping Room also offers:</p>
+                            <ul>
+                                <li><strong>Breakfast & Lunch:</strong> Light café fare including salads, soups, and sandwiches</li>
+                                <li><strong>Tea Retail:</strong> Purchase your favorite loose-leaf teas to enjoy at home</li>
+                                <li><strong>Tea Accessories:</strong> Teapots, cups, and brewing accessories</li>
+                                <li><strong>Gift Boxes:</strong> Curated tea gift sets perfect for tea lovers</li>
+                                <li><strong>Private Events:</strong> The space can be reserved for bridal showers, book clubs, and special gatherings</li>
+                            </ul>
+                        </div>
+
+                        <div class="section">
+                            <h2>What to Avoid</h2>
+                            <p>Items that contain gluten at The Steeping Room:</p>
+                            <ul>
+                                <li><strong>Regular scones and pastries:</strong> Standard baked goods contain gluten—always request GF versions</li>
+                                <li><strong>Standard tea sandwiches:</strong> Regular bread contains gluten—request GF bread substitution</li>
+                                <li><strong>Some desserts:</strong> Confirm which sweets are GF-safe with your server</li>
+                                <li><strong>Certain flavored teas:</strong> Some may contain barley malt—ask before ordering</li>
+                            </ul>
                         </div>
 
                         <div class="section">
                             <h2>Community Reviews</h2>
                             <blockquote style="border-left: 3px solid #4CAF50; padding-left: 1rem; margin: 1rem 0; font-style: italic;">
-                                "Finally, a place where I can enjoy afternoon tea as a celiac! The GF scones are delicious and the experience is lovely." — Rebecca T., Austin
+                                "Finally, a place where I can enjoy afternoon tea as a celiac! The GF scones are honestly delicious—buttery and flaky, served warm with real clotted cream. The whole experience was lovely and I didn't feel like I was missing out at all." — Rebecca T., Austin
                             </blockquote>
                             <blockquote style="border-left: 3px solid #4CAF50; padding-left: 1rem; margin: 1rem 0; font-style: italic;">
-                                "Brought my gluten-free mom here for her birthday and she was thrilled. Just call ahead!" — Jennifer K., Round Rock
+                                "Brought my gluten-free mom here for her 65th birthday and she was absolutely thrilled. Tears of joy when she saw the beautiful three-tiered tray with everything she could eat! Just be sure to call ahead and mention your dietary needs." — Jennifer K., Round Rock
+                            </blockquote>
+                            <blockquote style="border-left: 3px solid #4CAF50; padding-left: 1rem; margin: 1rem 0; font-style: italic;">
+                                "Such a peaceful escape from the chaos of everyday life. The tea selection is incredible, and the staff really knows their stuff. Grateful they accommodate GF diners so thoughtfully." — Linda M., Austin
                             </blockquote>
                         </div>
 
