--- a/restaurants/bird-bird-biscuit.html
+++ b/restaurants/bird-bird-biscuit.html
@@ -145,41 +145,59 @@
                     <div class="main-content">
                         <div class="section">
                             <h2>About Bird Bird Biscuit</h2>
-                            <p class="description">Bird Bird Biscuit has become an Austin institution, known for their creative biscuit sandwiches and genuine commitment to hospitality. With three locations across Austin, they've built a devoted following who line up for their signature creations. The motto? "Let the biscuit bring the joy!"</p>
-                            <p>What makes Bird Bird special for gluten-free diners is that they offer <strong>gluten-free biscuits</strong> as an option. You can enjoy their creative sandwich fillings on a GF biscuit, giving celiac diners access to the Bird Bird experience.</p>
+                            <p class="description">Bird Bird Biscuit has become an Austin institution, earning devoted followers with their creative biscuit sandwiches, genuine commitment to hospitality, and sheer deliciousness. With three locations across Austin, they've built a community of biscuit lovers who line up for their signature creations. Their motto? "Let the biscuit bring the joy!"</p>
+                            <p>What started as a passion project by former Top Chef contestant Brian Batch has grown into one of Austin's most beloved breakfast and brunch destinations. The biscuits—buttery, flaky, substantial—are the canvas, while creative fillings ranging from fried chicken to seasonal specials provide endless variety.</p>
+                            <p>For gluten-free diners, Bird Bird offers something remarkable: <strong>gluten-free biscuits</strong> that let you join in the experience. While the biscuit is traditionally a gluten-heavy food, Bird Bird's GF version means celiac diners aren't left watching from the sidelines as everyone else enjoys Austin's biscuit scene.</p>
                         </div>
 
                         <div class="section">
-                            <h2>Gluten-Free Options</h2>
-                            <p>Bird Bird Biscuit accommodates GF diners with:</p>
+                            <h2>Gluten-Free Dining at Bird Bird</h2>
+                            <p>Bird Bird Biscuit's GF accommodations give celiac diners access to the full experience:</p>
                             <ul class="gf-features">
-                                <li><strong>GF Biscuits Available:</strong> Substitute a gluten-free biscuit on most sandwiches</li>
-                                <li><strong>Online Ordering:</strong> Select GF biscuit option when ordering online</li>
-                                <li><strong>Kiosk Ordering:</strong> GF option available when ordering in-store</li>
-                                <li><strong>Staff Awareness:</strong> Team trained on dietary accommodations</li>
+                                <li><strong>GF Biscuits Available:</strong> Substitute a quality gluten-free biscuit on most sandwiches for a small upcharge</li>
+                                <li><strong>Easy Online Ordering:</strong> Select the GF biscuit option clearly when ordering through their website</li>
+                                <li><strong>In-Store Kiosk:</strong> GF option is easy to select when ordering at their self-service kiosks</li>
+                                <li><strong>Staff Training:</strong> Team members are trained on dietary accommodations and can answer questions</li>
+                                <li><strong>Made Fresh:</strong> GF biscuits are prepared fresh alongside regular orders</li>
                             </ul>
-                            <p><strong>Important Note:</strong> While GF biscuits are available, Bird Bird is not a dedicated GF kitchen. Cross-contamination is possible. Those with severe celiac disease should assess their personal comfort level.</p>
+                            <p><strong>Cross-Contamination Note:</strong> Bird Bird is not a dedicated gluten-free kitchen. Biscuits are prepared in a shared environment where flour is present. While they take care, cross-contamination is possible. Those with severe celiac disease or extreme sensitivity should assess their personal comfort level. If highly sensitive, consider that this may not be the safest choice.</p>
                         </div>
 
                         <div class="section">
-                            <h2>How to Order</h2>
-                            <p>Bird Bird operates primarily on an online ordering model:</p>
+                            <h2>Popular Sandwiches (Order with GF Biscuit)</h2>
+                            <p>The menu features creative sandwiches perfect for breakfast, brunch, or anytime satisfaction:</p>
                             <ul>
-                                <li><strong>Order Online:</strong> Place your order ahead for maximum convenience</li>
-                                <li><strong>Pickup Time:</strong> You'll receive an estimated pickup time with your order</li>
-                                <li><strong>Text Notification:</strong> You'll get a text when your order is ready</li>
-                                <li><strong>Pickup Window:</strong> Head to the front pickup window when notified</li>
-                                <li><strong>In-Store Kiosk:</strong> Available if you can't order online</li>
-                                <li><strong>No Phone Orders:</strong> Sorry, phone orders are not accepted</li>
+                                <li><strong>The O.G.:</strong> Fried chicken breast, honey butter, pickles—the signature sandwich that started it all</li>
+                                <li><strong>Nana:</strong> Fried chicken, pimento cheese, bacon, hot honey—indulgent and perfect</li>
+                                <li><strong>Tammy:</strong> Fried chicken, sausage gravy, scrambled eggs—the ultimate breakfast</li>
+                                <li><strong>Julie:</strong> Breakfast sausage, egg, American cheese—a classic done right</li>
+                                <li><strong>Kim:</strong> Vegetarian option with egg, cheddar, avocado, pickled jalapeños</li>
+                                <li><strong>Seasonal Specials:</strong> Rotating limited-time offerings that are worth watching for</li>
                             </ul>
-                            <p><strong>Pro Tip:</strong> Order online ahead of time—they make your food fresh just before your pickup time!</p>
+                            <p><strong>Note:</strong> Confirm which fillings are GF-safe beyond just the biscuit—some sauces or preparations may contain gluten. Ask about the sausage gravy specifically.</p>
+                        </div>
+
+                        <div class="section">
+                            <h2>How to Order (It's Easy!)</h2>
+                            <p>Bird Bird operates primarily on an online ordering model that's streamlined and efficient:</p>
+                            <ul>
+                                <li><strong>Order Online:</strong> Visit their website and place your order ahead of time—this is the preferred method</li>
+                                <li><strong>Select GF:</strong> When customizing your sandwich, select "Gluten-Free Biscuit" as your option</li>
+                                <li><strong>Choose Pickup Time:</strong> You'll select or receive an estimated pickup time with your order</li>
+                                <li><strong>Get Notification:</strong> You'll receive a text when your order is ready—no more waiting in line</li>
+                                <li><strong>Grab at Window:</strong> Head to the pickup window when notified and enjoy your fresh sandwich</li>
+                                <li><strong>In-Store Kiosk:</strong> If you can't order online, self-service kiosks are available at each location</li>
+                                <li><strong>No Phone Orders:</strong> Note that phone orders are not accepted—online or kiosk only</li>
+                            </ul>
+                            <p><strong>Pro Tip:</strong> Order online ahead of time—they make your food fresh just before your pickup time, so your biscuit will be warm and perfect! Avoid the breakfast rush by ordering for a mid-morning pickup.</p>
                         </div>
 
                         <div class="section">
                             <h2>Three Austin Locations</h2>
+                            <p>Bird Bird has three locations across Austin, making it accessible no matter where you are in the city:</p>
                             <table style="width:100%; border-collapse: collapse; margin: 1rem 0;">
                                 <tr style="border-bottom: 1px solid #ddd;">
-                                    <td style="padding: 0.5rem;"><strong>Manor Road</strong></td>
+                                    <td style="padding: 0.5rem;"><strong>Manor Road (Original)</strong></td>
                                     <td style="padding: 0.5rem;">2701 Manor Road</td>
                                     <td style="padding: 0.5rem;">(512) 761-4922</td>
                                 </tr>
@@ -197,10 +215,10 @@
                         </div>
 
                         <div class="section">
-                            <h2>Hours</h2>
-                            <p><strong>Manor Road:</strong></p>
+                            <h2>Hours by Location</h2>
+                            <p><strong>Manor Road (Original):</strong></p>
                             <ul>
-                                <li>Thursday-Saturday: 7:30am-9pm</li>
+                                <li>Thursday-Saturday: 7:30am-9pm (dinner service!)</li>
                                 <li>Monday-Wednesday: 7:30am-2pm</li>
                                 <li>Sunday: 7:30am-3pm</li>
                             </ul>
@@ -209,23 +227,29 @@
                                 <li>Monday-Friday: 7:30am-2pm</li>
                                 <li>Saturday-Sunday: 7:30am-3pm</li>
                             </ul>
+                            <p><em>Note: Hours may vary seasonally—check their website for current times.</em></p>
                         </div>
 
                         <div class="section">
                             <h2>Catering & Gift Cards</h2>
+                            <p>Bird Bird is perfect for groups and events:</p>
                             <ul>
-                                <li><strong>Catering:</strong> Perfect for events and meetings—contact them for catering menu</li>
-                                <li><strong>Gift Cards:</strong> Available online for the biscuit lover in your life</li>
+                                <li><strong>Catering:</strong> Perfect for meetings, events, parties, and celebrations—contact them for catering menu and GF options for groups</li>
+                                <li><strong>Gift Cards:</strong> Available online for the biscuit lover in your life—makes a great Austin-themed gift</li>
+                                <li><strong>Merchandise:</strong> Rep your favorite biscuit shop with their branded gear</li>
                             </ul>
                         </div>
 
                         <div class="section">
                             <h2>Community Reviews</h2>
                             <blockquote style="border-left: 3px solid #4CAF50; padding-left: 1rem; margin: 1rem 0; font-style: italic;">
-                                "I was so excited to find out they have GF biscuits! The sandwich was delicious and I didn't feel left out of the Austin biscuit craze." — Katie M., Austin
+                                "I was SO excited to find out they have GF biscuits! I'd heard about Bird Bird for years but assumed it was off-limits for me. The sandwich was absolutely delicious and I didn't feel left out of the Austin biscuit craze anymore. The O.G. on a GF biscuit is incredible!" — Katie M., Austin
                             </blockquote>
                             <blockquote style="border-left: 3px solid #4CAF50; padding-left: 1rem; margin: 1rem 0; font-style: italic;">
-                                "Order online, pick up, and enjoy. The GF biscuit is really good—crispy on the outside, fluffy inside. Worth the visit!" — Miguel R., Austin
+                                "Order online, pick up, and enjoy. Their system is so efficient! The GF biscuit is genuinely good—crispy on the outside, fluffy inside. It holds up to the fillings perfectly. Worth every visit!" — Miguel R., Austin
+                            </blockquote>
+                            <blockquote style="border-left: 3px solid #4CAF50; padding-left: 1rem; margin: 1rem 0; font-style: italic;">
+                                "The Nana sandwich with GF biscuit is my weekend treat. Yes, I'm aware of the shared kitchen situation, but I've never had an issue. For many GF folks who can tolerate small amounts of cross-contact, this is a game-changer." — Sarah T., Austin
                             </blockquote>
                         </div>
 
